--- a/src/Components/Topbar/Topbar.css
+++ b/src/Components/Topbar/Topbar.css
@@ -48,7 +48,7 @@
     height: 2rem;
     border-radius:50%;
     background-image: linear-gradient(180deg, #42B7FE, #2B8EFE);
-    box-shadow: #2B8EFE 0px 3px 54px;
+    /* box-shadow: #2B8EFE 0px 1px 24px; */
     display: flex;
     justify-content: center;
     align-items: center;
