--- a/src/Components/Topbar/Topbar.css
+++ b/src/Components/Topbar/Topbar.css
@@ -59,3 +59,20 @@
     font-size: 1.32rem;
     color: #fff;
   }
+  .sign_btn{
+    border: none;
+    padding: 5px 25px;
+    text-transform: capitalize;
+    border: 1px solid #FF8F50;
+    color: #333;
+    background-color: #fff;
+    font-weight: 400;
+    border-radius: 20px;
+    font-size: .84rem;
+    font-weight: bold;
+    transition: all .3s ease-in-out;
+  }
+  .sign_btn:hover {
+    background-image: linear-gradient(180deg, #FF8F50, #FF5324);
+    color: #fff;
+}
