issues arised and fixed at home,event

--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Abril+Fatface&display=swap');
 *{
     font-family: 'Barlow', sans-serif;
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
 }
+
 .commonBtn_red{
     border: none !important;
     text-transform: capitalize;
